--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -3304,9 +3304,6 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
-                    <connections>
-                        <segue destination="6OS-s3-aeZ" kind="relationship" relationship="rootViewController" id="5T8-MH-aOn"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="41p-ht-Kji" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -3350,7 +3347,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RUs-hf-HH3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3888" y="-1005"/>
+            <point key="canvasLocation" x="2824" y="1097"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="GsB-up-rLm">
@@ -3383,6 +3380,32 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
             </objects>
             <point key="canvasLocation" x="3372" y="-323"/>
         </scene>
+        <!--Edit Profile Table View Controller-->
+        <scene sceneID="hum-z2-9xc">
+            <objects>
+                <tableViewController id="4JH-Ha-tn3" customClass="EditProfileTableViewController" customModule="HowAmIDoing" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="SaZ-aO-VgQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3t4-IA-4B8">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3t4-IA-4B8" id="gRd-BO-crp">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="4JH-Ha-tn3" id="Wgm-Xr-fmd"/>
+                            <outlet property="delegate" destination="4JH-Ha-tn3" id="rZN-Qh-Nsf"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0pC-Te-Rcr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3051" y="341"/>
+        </scene>
         <!--Vendor Accounts Table View Controller-->
         <scene sceneID="qvE-xx-e2G">
             <objects>
@@ -3407,7 +3430,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wqr-cl-oPG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3096" y="462"/>
+            <point key="canvasLocation" x="3476" y="1007"/>
         </scene>
         <!--Chart View Controller-->
         <scene sceneID="QgN-CS-YL3">
@@ -3500,6 +3523,9 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="4JH-Ha-tn3" kind="show" id="nTL-gp-r0o"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="aJ3-eN-rY6" style="IBUITableViewCellStyleDefault" id="ykD-yK-QLL">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -3591,6 +3617,9 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="dYn-g7-66g"/>
+                    <connections>
+                        <segue destination="6OS-s3-aeZ" kind="show" identifier="ShowWebController" id="YZS-Xe-hN4"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QUI-05-hTj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
